Adding login router and modifications inside home and search html files

--- a/ecommerce/app/assets/javascripts/main/_home.html
+++ b/ecommerce/app/assets/javascripts/main/_home.html
@@ -1,3 +1,10 @@
 <h1> Welcome to Rails E-Commerce </h1>
 
-<a href="#/search"> Search for a product! </a>
+
+<div>
+	<a href="#!/login"> Logout! </a>
+</div>
+
+<div>
+	<a href="#!/search"> Search for a product! </a>
+</div>
